@@ -111,6 +111,7 @@ data CanRebuild = CanRebuild | NoRebuild
 defaultMain :: [Host] -> IO ()
 defaultMain hostlist = withConcurrentOutput $ do
 	useFileSystemEncoding
+	setupGpgEnv
 	Shim.cleanEnv
 	checkDebugMode
 	cmdline <- processCmdLine
