@@ -1,5 +1,7 @@
 propellor (4.7.4) UNRELEASED; urgency=medium
 
+  * Set GPG_TTY when run at a terminal, so that gpg can do password
+    prompting despite being connected by pipes to propellor (or git).
   * Rsync: Make rsync display less verbose.
 
  -- Joey Hess <id@joeyh.name>  Sat, 29 Jul 2017 20:02:32 -0400
